# NeonCROSS

./: CMakeLists.txt  README.md
KAT/: sha_512_sum_KATs
KAT_Generation/: CMakeLists.txt  gen_all_kat.sh
KAT_Generation/include/: rng.h
KAT_Generation/lib/: PQCgenKAT_sign.c  rng.c
neon/include/: architecture_detect.h  csprng_hash.h  fips202x2.h  fp_arith.h  restr_arith.h  restr_matvec.S  sha3.h
neon/lib/: CROSS.c  feat.S  fips202x2.c  merkle.c  seedtree.c
ref/include/: CROSS.h  api.h  csprng_hash.h  fips202.h  fp_arith.h  keccakf1600.h  merkle_tree.h  pack_unpack.h  parameters.h  restr_arith.h  seedtree.h  sha3.h
ref/lib/: CROSS.c  csprng_hash.c  fips202.c  keccakf1600.c  merkle.c  pack_unpack.c  seedtree.c  sign.c
test/include/: arith_unit_tests.h  cycles.h  rng.h
test/lib/: CROSS_benchmark.c  CROSS_test.c  cycles.c
